completed add a character functionality

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,6 +30,8 @@
             <li><a href="{% url 'games_create' %}">Add a Game</a></li>
             <li><a href="{% url 'index' %}">List of Games</a></li>
             <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'characters_index' %}">Character List</a></li>
+            <li><a href="{% url 'characters_create' %}">Add a Character</a></li>
           </ul>
         </div>
       </nav>
